--- a/Report/spacecraft.bib
+++ b/Report/spacecraft.bib
@@ -87,4 +87,15 @@
   year={2023},
   url={https://www.cer-rec.gc.ca/en/safety-environment/industry-performance/interactive-pipeline/index.html},
   urldate={2025-02-10}
+},
+@article{gaas,
+title = {GaAs thin-film solar cells for perfect absorption in the visible and near-infrared bands},
+journal = {Optical Materials},
+volume = {143},
+pages = {114269},
+year = {2023},
+issn = {0925-3467},
+doi = {https://doi.org/10.1016/j.optmat.2023.114269},
+url = {https://www.sciencedirect.com/science/article/pii/S0925346723008418},
+author = {Jun Zhu and Tangming Li and Liuli Qin}
 }
